2006-10-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/heap.c (igraph_i_cutheap_switch, igraph_i_cutheap_sink)
	(igraph_i_cutheap_shift_up, igraph_i_cutheap_init)
	(igraph_i_cutheap_destroy, igraph_i_cutheap_empty)
	(igraph_i_cutheap_active_size, igraph_i_cutheap_size)
	(igraph_i_cutheap_maxvalue, igraph_i_cutheap_popmax)
	(igraph_i_cutheap_update, igraph_i_cutheap_reset_undefine) : added
	
	* examples/simple/igraph_i_cutheap.c : added

	* src/adjlist.c (igraph_i_adjlist_destroy) : check for NULL pointer
	
	* src/flow.c (igraph_minimum_cut, igraph_minimum_vertex_cut_pair)
	(igraph_minimum_vertex_cut) : added
	

2006-09-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_buckets.c (igraph_buckets_init)
	(igraph_buckets_destroy, igraph_buckets_popmax)
	(igraph_buckets_add) : added
	* src/flow.c (igraph_maxflow) : speed up by using buckets instead
	of a dqueue
	* examples/simple/flow.c : do a real test with a moderate size
	network

2006-09-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow) : error checks added, bugs corrected
	(igraph_edge_connectivity_pair, igraph_edge_connectivity)
	(igraph_vertex_connectivity_pair, igraph_vertex_connectivity) : added
	* examples/simple/flow.c : added

2006-09-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow) : rewritten

2006-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_dimacs, igraph_write_graph_dimacs)
	: added

	* src/foreign.c (igraph_write_graph_dimacs) : minor change, capacity
	is written with %g instead of %e

	* src/vector.c (igraph_vector_rank) : added

2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_density) : added loops argument

2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow) : added

2006-09-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_delete_edges) : corrected
	attribute handling bug